--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,9 @@
 ---
-- name: restart-caddy-container
+- name: Restart-caddy-container
   community.docker.docker_container:
     name: caddy
     restart: true
+- name: Reload_caddy_service
+  community.docker.docker_container_exec:
+    container: caddy
+    command: caddy reload -c /etc/caddy/Caddyfile
